src/test/06-Errors/error-return-vec3-missing.txt
error-return-vec3-missing.ck:2:5: error: not all control paths in 'fun vec3 missingReturn()' return a value
[2] fun vec3 missingReturn()
        ^
